add connect database, migration table and create seeder for data each table

--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
 PORT=8080
+
+# DB SAMPLE
+DB_HOST=study-buddies-postgres
+DB_USER=studybuddies
+DB_PASSWORD=password
+DB_NAME=study_buddies
+DB_PORT=5432
+DB_SSL_MODE=disable 
+DB_TIME_ZONE=Asia/Jakarta
