add REST API and Swagger for docs API

--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
+# GENERAL
 PORT=8080
+APP=studybuddies-core
+VERSION=0.0.1
+SCHEME=http
+BASE_URL=localhost:8080
 
 # DB SAMPLE
 DB_HOST=study-buddies-postgres
