add redis for initial, connection, docker, set, get, delete to implement in api service

--- a/.env
+++ b/.env
@@ -13,3 +13,7 @@ DB_NAME=study_buddies
 DB_PORT=5432
 DB_SSL_MODE=disable 
 DB_TIME_ZONE=Asia/Jakarta
+
+# REDIS
+REDIS_HOST=study-buddies-redis
+REDIS_PORT=6379
