--- a/.env
+++ b/.env
@@ -17,3 +17,7 @@ DB_TIME_ZONE=Asia/Jakarta
 # REDIS
 REDIS_HOST=study-buddies-redis
 REDIS_PORT=6379
+
+# ELASTIC SEARCH
+ELASTIC_SEARCH_URL=http://study-buddies-elasticsearch:9200
+
