feat/kafka-zookeeper: add kafka with zookeper for message broker

--- a/.env
+++ b/.env
@@ -21,3 +21,5 @@ REDIS_PORT=6379
 # ELASTIC SEARCH
 ELASTIC_SEARCH_URL=http://study-buddies-elasticsearch:9200
 
+# KAFKA SERVICE
+KAFKA_BROKER=study-buddies-kafka:9092
