add kafka kraft

--- a/.env
+++ b/.env
@@ -21,5 +21,8 @@ REDIS_PORT=6379
 # ELASTIC SEARCH
 ELASTIC_SEARCH_URL=http://study-buddies-elasticsearch:9200
 
-# KAFKA SERVICE
-KAFKA_BROKER=study-buddies-kafka:9092
+# KAFKA ZOOKEEPER SERVICE
+# KAFKA_BROKER=study-buddies-kafka:9092
+
+# KAFKA KRAFT SERIVE
+KAFKA_BROKER=study-buddies-kafka-kraft:9092
